--- a/public/user/selectTemplate.ejs
+++ b/public/user/selectTemplate.ejs
@@ -8,5 +8,8 @@
 </head>
 <body>
   <h1>SELECT your prefered template</h1>
+  <form action="/">
+    <input type="submit" value="submit">
+  </form>
 </body>
 </html>
