--- a/docs/project/project/skills.ejs
+++ b/docs/project/project/skills.ejs
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.0.0-rc.5/dist/html2canvas.min.js"></script>
     <script src="https://superal.github.io/canvas2image/canvas2image.js"></script>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="./templates/template1.css">
     <link rel="stylesheet" href="./templates/template2.css">
     <link rel="stylesheet" href="./templates/template3.css">
@@ -62,90 +62,61 @@
 
     <div class="container-fluid p-0">
 
-        <!-- **********     FORM - 1    ********** -->
+       
 
-        <form id="form1" class="step step-1 active" action="/experience" method="GET">
+        <form id="form1" class="step step-1 active" action="/summary" method="GET">
             
             <div class="container mt-5">
                 <br>
                 <u>
-                <h1 class="d-flex justify-content-center m-5" style="font-weight: 800; margin-top: 5px;">Personal Details</h1>
+                <h1 class="d-flex justify-content-center m-5" style="font-weight: 800; margin-top: 5px;">Skills & Achievements</h1>
                 </u>
             </div>
 
             <div class="card-container mb-5 shadow p-3 mb-5 bg-white" style="width:850px; margin:auto" id="card">
-               
+             
                 <hr style="width:95%; margin: 10px;" , size="3" class="bg-secondary">
-                <div class="d-flex flex-row">
-                    <!-- <input type="file" accept="image/*" name="inpImg" id="inpImg">
-                    <div class="imgContainer float-left m-4">
-                        <img src="" alt="Image Preview" id="image">
-                        <span id="previewText"><span id="innerSpan"><i class="fas fa-upload me-2"></i>Upload
-                                photo</span></span>
-                    </div> -->
-                    <div class="row col-6  m-3 " style="float:left;">
-                        <div class="col-12">
-                            <label for="fullName" class="form-label">Full Name</label>
-                            <input type="text" class="form-control" id="fullName" name="fullName">
-                        </div>
-                        <div class="col-12">
-                            
-                                <label for="dob" class="form-label">Birth Date</label><br>
-                                <input type="text" class="date" id="dob" name="dob">
-                            
-                        </div>
-                    </div>
-                </div>
+           
 
                 <div class="row mx-5 mb-5">
-                    <div class="col-md-6 ">
-                        <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="email" name="email" placeholder="example@gmail.com" required>
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label for="skill" style="margin-top: 10px;"  class="form-label">Skills</label>
+                        <input type="text"style="height: 5em; width: 100%" class="form-control" id="skill" name="skill" placeholder="Skills" required>
+                      </div>
                     </div>
-
-                    <div class="col-md-6">
-                        <label for="phone" class="form-label">Phone</label>
-                        <input type="text" class="form-control" id="phone" name="phone" placeholder="xxxxxxxxxx" >
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label for="achievement" style="margin-top: 10px;" class="form-label">Achievements</label>
+                        <input type="text"style="height: 5em; width: 100%" class="form-control" id="achievement" name="achievement" placeholder="Achievements" required>
+                      </div>
                     </div>
-
-                    <div class="col-12 mt-3">
-                        <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="address" name="address" placeholder="Enter full address">
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label for="interest"style="margin-top: 10px;" class="form-label">Interests</label>
+                        <input type="text"style="height: 5em; width: 100%" class="form-control" id="interest" name="interest" placeholder="Interests" required>
+                      </div>
                     </div>
-
-
-                    <div class="col-md-5 mt-3">
-                        <label for="country" class="form-label">Country</label>
-                        <input type="text" class="form-control" id="country" name="country" placeholder="Enter Country">
+                    <div class="col-12">
+                      <div class="form-group">
+                        <label for="knownLanguage"style="margin-top: 10px;" class="form-label">Known Languages</label>
+                        <input type="text" class="form-control" id="knownLanguage" name="knownLanguage" placeholder="Known Languages" required>
+                      </div>
                     </div>
-
-                    <div class="col-md-3 mt-3">
-                        <label for="city" class="form-label">City</label>
-                        <input type="text" class="form-control" id="city" name = "city" placeholder="Enter city">
-                    </div>
-
-
-                    <div class="row">
-                      
-                        <div class="col-md-4 mt-3">
-                            <label for="gender" class="form-label">Gender</label>
-                            <select id="gender" class="form-select" name="gender">
-                                <option>Male</option>
-                                <option>Female</option>
-                                <option>Other</option>
-                            </select>
-                        </div>
-                    </div>
+                  </div>
+                  
                 </div>
 
-            </div>
             <div class="btn-box container d-block text-center" style="width:850px;">
-              <input type="submit" value="Submit">
-              <!-- <a href="/experience">
+                <a href="education.ejs">
+                <button type="button" class="next_btn" id="next1">Back<i
+                    class="bi bi-arrow-left-circle ms-3"></i></button>
+                </a>    
                 <button type="button" class="next_btn" id="next1">Next Step<i
                         class="bi bi-arrow-right-circle ms-3"></i></button>
-                </a> -->
-                    </div>
+                      
+            </div>
+            
 
         </form>
     </div>
