--- a/public/user/selectTemplate.ejs
+++ b/public/user/selectTemplate.ejs
@@ -8,8 +8,9 @@
 </head>
 <body>
   <h1>SELECT your prefered template</h1>
-  <form action="/">
-    <input type="submit" value="submit">
+  <form action="/" method="post">
+    <input type="submit" value="Generate CV">
+    <button type="submit" formaction="/generate-pdf">Download as PDF</button>
   </form>
 </body>
 </html>
